<resources>
    <string name="application_label">FrostWire</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="activity_browse_peers_name">People Nearby</string>
    <string name="activity_chat_name">Chat</string>
    <string name="activity_downloads_name">Active Downloads</string>
    <string name="activity_uploads_name">Active Uploads</string>
    <string name="activity_about">About</string>
    <string name="activity_debug_name">Debug</string>
    <string name="disconnected">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure">All transfers will stop.\nAre you sure?</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="wait">Wait</string>
    <string name="exit">Exit</string>
    <string name="no_wifi_want_to_fix_it_question">You\'re not connected to a WiFi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services">Your WiFi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services">The WiFi network has changed. Restarting Services.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="search_label">Search</string>
    <string name="settings_description">Search Settings</string>
    <string name="clear_finished">Clear Finished</string>
    <string name="support_free_software">Support Free Software</string>
    <string name="show_love">Love FrostWire?</string>
    <string name="waiting">Waiting…</string>
    <string name="use_icons_to_browse">Use the icons to browse files.</string>
    <string name="type_to_filter_results">Type to filter results.</string>
    <string name="fetching_file_list">Fetching list of shared</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="peer">Peer</string>
    <string name="peers">Peers</string>
    <string name="copy">Copy</string>
    <string name="audio">Audio</string>
    <string name="audio_music">Audio/Music</string>
    <string name="video">Video</string>
    <string name="application">Application</string>
    <string name="applications">Applications</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="sharing">Sharing</string>
    <string name="send_pm">Send Private Message</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="change_manual_listening_port">Set Listening Port 1000 and 65535</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="max_concurrent_uploads">Maximum Simultaneous Uploads</string>
    <string name="search_no_keywords">Please enter search keywords</string>
    <string name="search_select_filetype">Please select a file type</string>
    <string name="searching_for">Searching for</string>
    <string name="search_for_type_files">Search for %s files</string>
    <string name="update_title">Update Time!</string>
    <string name="update_message">FrostWire has Downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="next_time">Next Time</string>
    <string name="change_my_nickname">Change my Nickname</string>
    <string name="try_changing_your_nickname">Enter your nickname</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="go_to">Go To</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My files</string>
    <string name="clear_messages">Clear messages</string>
    <string name="chat_actions">Chat Actions</string>
    <string name="preferences">Preferences</string>
    <string name="please_connect">Please connect to use this feature</string>
    <string name="remove">Remove</string>
    <string name="try_valid_port_next_time">Try a valid port next time 1000 and 65500</string>
    <string name="still_listening_on_port">Still listening on port</string>
    <string name="uh_still_listening_on_port">Uh? I\'m still listening on port</string>
    <string name="new_port_saved">New Port saved</string>
    <string name="now_on_port">Now on port</string>
    <string name="stop_all_transfers_message">This will cancel all ongoing and queued downloads. All transfered data will be lost. Are you sure?</string>
    <string name="files">files</string>
    <string name="touch_filetype_icon">Touch icon to change file type</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="downloads">Downloads</string>
    <string name="minimize_frostwire">Minimize FrostWire</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="tell_others_chooser">Tweet / SMS / Email</string>
    <string name="tell_others_subject">Got FrostWire for Android yet?</string>
    <string name="and_choose_what_filetypes_to_share">Check what types of files you\'d like to enable for sharing on the FrostWire Mobile Network and nearby Wi-Fi enabled Desktops.</string>
    <string name="before_getting_started">Before you get started</string>
    <string name="user_connecting">User connecting</string>
    <string name="accept_connection_from">Accept connection from</string>
    <string name="please_enter_a_number">Please enter a number</string>
    <string name="gotta_have_at_least_one_upload_slot">Gotta have at least one upload slot</string>
    <string name="only_up_to_n_uploads_at_the_same_time">Only up to %s uploads at the same time</string>
    <string name="sharing_preferences">Sharing Preferences</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="networking_preferences">Networking Preferences</string>
    <string name="simultaneous_uploads">Simultaneous Uploads</string>
    <string name="simultaneous_uploads_summary">Set how many uploads you want to allow at the same time.</string>
    <string name="multicast_discovery">Multicast Discovery</string>
    <string name="multicast_discovery_summary">Connect to local Wi-Fi peers via multicast (recommended)</string>
    <string name="broadcast_discovery">Broadcast Discovery</string>
    <string name="broadcast_discovery_summary">Connect to local Wi-Fi peers via broadcast (more traffic on router)</string>
    <string name="other_settings">Other settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G</string>
    <string name="dialog_share_indicator_text_text">Browse yourself, Share or Unshare multiple files using the check boxes then touching any checked file.\n\nUse the padlock icons to share or unshare individual files.</string>
    <string name="dialog_share_indicator_check_text">Show this help next time</string>
    <string name="show_share_indication">Show Sharing Help</string>
    <string name="share_finished_downloads">Share finished downloads on WiFi</string>
    <string name="share_finished_downloads_summary">Finished downloads will be available to other FrostWire users on your WiFi network.</string>
    <string name="search_settings">Search Settings</string>
    <string name="use_clearbits">Use ClearBits.net</string>
    <string name="use_extratorrent">Use ExtraTorrent.com</string>
    <string name="use_isohunt">Use ISOHunt.com</string>
    <string name="use_mininova">Use Mininova.org</string>
    <string name="use_vertor">Use Vertor.com</string>
    <string name="dummy_title">[Title]</string>
    <string name="dummy_status">[Status]</string>
    <string name="dummy_speed">[Speed]</string>
    <string name="dummy_size">[Size]</string>
    <string name="dummy_seeds">[Seeds]</string>
    <string name="dummy_peers">[Peers]</string>
    <string name="view_transfer_list_item_button_action_description">Action</string>
    <string name="view_transfer_list_item_group_indicator_description">More/Less information</string>
    <string name="view_transfer_list_item_icon_description">File type icon</string>
    <string name="torrent_settings">Torrent</string>
    <string name="torrent_max_download_speed_summary">Max Download Speed</string>
    <string name="torrent_max_download_speed">Max Download Speed</string>
    <string name="torrent_max_upload_speed_summary">Max Upload Speed</string>
    <string name="torrent_max_upload_speed">Max Upload Speed</string>
    <string name="torrent_max_downloads_summary">Max Downloads</string>
    <string name="torrent_max_downloads">Max Downloads</string>
    <string name="torrent_max_uploads_summary">Max Uploads</string>
    <string name="torrent_max_uploads">Max Uploads</string>
    <string name="torrent_max_total_connections_summary">Max Total Connections</string>
    <string name="torrent_max_total_connections">Max Total Connections</string>
    <string name="torrent_max_torrent_connection_summary">Max Torrent Connections</string>
    <string name="torrent_max_torrent_connection">Max Torrent Connections</string>
    <string name="seed_finished_torrents">Seed Finished Torrents</string>
    <string name="seed_finished_torrents_summary">Share pieces of torrent downloads with anybody on the internet via BitTorrent</string>
    <string name="seed_finished_torrents_wifi_only">Seed only on WiFi</string>
    <string name="seed_finished_torrents_wifi_only_summary">Seeds only when connected via WiFi to save bandwidth on your data plan</string>
    <string name="show_transers_on_download_start">Show Transfers On Download Start</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="clear_torrent_index">Clear Torrent Index</string>
    <string name="clear_torrent_index_summary">Clear Torrent Index</string>
    <string name="clear">Clear</string>
    <string name="welcome_to_frostwire">Welcome to FrostWire</string>
    <string name="let_apos_s_set_you_up_before_we_begin_">Let\'s set you up before we begin.</string>
    <string name="how_others_see_you_on_the_local_network_wifi_">How others see you on the local network (WiFi)</string>
    <string name="seeding_settings">Seeding Settings</string>
    <string name="seeding_settings_explanation">BitTorrent users on the internet will be able to download file chunks of the data your torrents seed.</string>
    <string name="seeding_wifi_settings_explanation">Seed only when using a WiFi connection. Avoid extra charges from your carrier.</string>
    <string name="use_kat">Use Kat.ph</string>
</resources>