<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011, 2012, FrostWire(TM). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_untabbed_header_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/welcome_to_frostwire"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/let_apos_s_set_you_up_before_we_begin_"
        android:textColor="@color/frostwire_gray_explanation_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/view_general_wizard_page_text_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/try_changing_your_nickname"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/how_others_see_you_on_the_local_network_wifi_"
        android:textColor="@color/frostwire_gray_explanation_text" />

    <EditText
        android:id="@+id/view_general_wizard_page_input_nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@null"
        android:layout_marginBottom="5dp"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_hint"
        android:paddingLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/seeding_settings"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/view_general_wizard_page_check_seed_finished_torrents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/seed_finished_torrents"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/seeding_settings_explanation"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/frostwire_gray_explanation_text" />

    <CheckBox
        android:id="@+id/view_general_wizard_page_check_seed_finished_torrents_wifi_only"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/seed_finished_torrents_wifi_only"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/seeding_wifi_settings_explanation"
        android:textColor="@color/frostwire_gray_explanation_text" />

</LinearLayout>