<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011, 2012, FrostWire(TM). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <!-- Expand Button holder -->

    <FrameLayout
        android:layout_width="56dp"
        android:layout_height="80dp"
        android:background="@drawable/selector_list_view_left_side"
        android:gravity="center|center_vertical" >

        <ImageView
            android:id="@+id/view_transfer_list_item_group_indicator"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_gravity="center|center_vertical"
            android:contentDescription="@string/view_transfer_list_item_group_indicator_description"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/view_transfer_list_item_icon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_gravity="center|center_vertical"
            android:contentDescription="@string/view_transfer_list_item_icon_description"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <!-- Meat of the adapter holder -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@drawable/selector_list_view_right_side"
        android:orientation="vertical"
        android:padding="5dp" >

        <!-- First row, title and call to action -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/view_transfer_list_item_title"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center_vertical"
                    android:ellipsize="end"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/dummy_title"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/view_transfer_list_item_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="@string/dummy_status"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/view_transfer_list_item_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_speed"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Second row, Status, speed, progress bar -->

        <ProgressBar
            android:id="@+id/view_transfer_list_item_progress"
            android:layout_width="fill_parent"
            android:layout_height="18dp"
            android:layout_margin="2dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/progress_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/view_transfer_list_item_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/dummy_size"
                android:textColor="#ffe9a54c"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/view_transfer_list_item_seeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/dummy_seeds"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/view_transfer_list_item_peers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_peers"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="40dp"
        android:layout_height="80dp"
        android:layout_gravity="center|center_vertical"
        android:background="@drawable/selector_list_view_left_side" >

        <ImageView
            android:id="@+id/view_transfer_list_item_button_action"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/view_transfer_list_item_button_action_description"
            android:src="@drawable/action_button" />
    </FrameLayout>

</LinearLayout>