<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011, 2012, FrostWire(TM). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:scrollbars="vertical" >

        <!-- demonstrative icons -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="32sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/locked" />

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/unlocked" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog_share_indicator_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dialog_share_indicator_text_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_share_indicator_button_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minLines="1"
            android:text="@string/done"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/dialog_share_indicator_check_show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="1"
            android:text="@string/dialog_share_indicator_check_text" />
    </LinearLayout>

</ScrollView>